<resources>
    <string name="app_name">KIDSY</string>
    <string name="home">Online Learing And Entertainment </string>
    <string name="hopen">Open</string>
    <string name="hclose">Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="homebtnbooks">Books</string>
    <string name="homebtnnewspapers">News Papers</string>
    <string name="homebtnentertainment">Entertainment</string>
    <string name="homebtnorders">My Orders</string>
    <string name="buybook">Buy Book</string>
    <string name="buyquantity">Enter Quantity :</string>
    <string name="buynow">Buy Now</string>
    <string name="buycancel">Cancel</string>
    <string name="buynowbtncheck">Checkout</string>
    <string name="buynowbtncancel">Cancel</string>
    <string name="newspapers">Choose a Category</string>
    <string name="gradebtn15">Grade 1-5 </string>
    <string name="gradebtn611">Grade 6 - 11</string>
    <string name="gradebtn1213">Grade 12 - 13</string>
    <string name="othersbtn">Others</string>
    <string name="articlesbtn">Articles</string>
    <string name="newspapername1">News Paper Name</string>
    <string name="grade611">Grade 6 - 11</string>
    <string name="newspaperreadnow">READ NOW</string>
    <string name="grade15">Grade 1 - 5</string>
    <string name="grade1213">Grade 12 - 13</string>
    <string name="others">Others</string>
    <string name="articles">Articles</string>
    <string name="readnow">Read Now</string>
    <string name="updatenewspaper">Update Newspaper Details</string>
    <string name="newspapername">News Paper Name</string>
    <string name="paymentinfo">Payment Details</string>
    <string name="payid">Payment ID</string>
    <string name="payaddress">Shipping Address</string>
    <string name="payfirstname">Cutomer Name</string>
    <string name="payemail">Email</string>
    <string name="payconfirm">Confirm above informations</string>
    <string name="paycardnumber">Credit Card Number</string>
    <string name="paycardowner">Card Owners Name</string>
    <string name="paycardexpiredate">Card Exp date mm/yy</string>
    <string name="paybookname">Book Name :</string>
    <string name="paybookqty">Number of books</string>
    <string name="paytotalprice">Total Payment :</string>
    <string name="paydate">Payment Date</string>
    <string name="paycomplete">Complete Payment</string>
    <string name="rpayid">Payment ID</string>
    <string name="deliver">Deliver Books</string>
    <string name="deliverinfo">Deliver Details</string>
    <string name="delbook">Book name</string>
    <string name="delid">Deliver ID</string>
    <string name="orderid">Order ID</string>
    <string name="deliveraddress">Delivery Address</string>
    <string name="deladdress">Deliver Address</string>
    <string name="delzip">Zip Code</string>
    <string name="delemail">Customer Email</string>
    <string name="delfirst">Customer Name</string>
    <string name="deldate">Delivery Date dd/mm/yyyy</string>
    <string name="delivered">Complete Payment</string>

    <string name="myorders">My Orders</string>
    <string name="updatepaymentinfo">Update Payment Informations</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delivermanage">Deliver Books</string>
    <string name="readmanage">Deliver Details</string>
    <string name="ausers">User Management</string>
    <string name="abooks">Book Management</string>
    <string name="anews">NewsPaper Management</string>
    <string name="aenter">Entertainment Management</string>
    <string name="apayments">Payments Management</string>
    <string name="adelivers">Delivery Management</string>
    <string name="image">Image</string>
    <string name="addnewspaper">Add News Paper</string>
    <string name="kidsyp">0712334221</string>
    <string name="kidsye">Kidsy@gmail.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="users">dashusers</string>
    <string name="dashpayments">Payments</string>
    <string name="dashdelivers">Delivers</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kidsy_number">0712334221</string>
    <string name="kidsy_email">Kidsy@gmail.com</string>
    <string name="kidsy_contact_us">Contact Us</string>
    <string name="logoText">KIDSY</string>
    <string name="logowelcome">Online Learning and Book Delivery</string>
    <string name="logo_go">Lets Go</string>
    <string name="todo">TODO</string>
    <string name="deliverupdate">Update</string>
    <string name="deliverdelete">Delete</string>
    <string name="updatepay">Update</string>
    <string name="deletepayment">Delete</string>
    <string name="paydateupdate">dd/mm/yyyy</string>
    <string name="remaining_deliveries">Remaining Deliveries</string>
    <string name="book_name">Book name :</string>
    <string name="book_price">Book Price :</string>
    <string name="book_shipping">Shipping :</string>
    <string name="book_total_price">Total Price</string>
    <string name="buy_total">total</string>
    <string name="pay_paybookqty">Book Quantity :</string>
    <string name="del_address">Address</string>
    <string name="del_quantity">Quantity</string>
    <string name="payccv">CCV</string>
    <string name="upd_deliver_date">Deliver Date</string>
    <string name="send_email">Send Email</string>
    <string name="delivering_your_book">Kidsy Deliver Service</string>
    //Registration
    <string name="name">Name</string>
    <string name="pno">Phone number</string>
    <string name="pwd1">Password</string>0
    <string name="create">Create My Account</string>

    //login
    <string name="log">Log into My Account</string>
    <string name="rem">Remember Me</string>
    <string name="admin">I am an Admin</string>
    <string name="nadmin">I am not an Admin</string>

    //Entertainment
    <string name="ent">Entertainment</string>
    <string name="quote">Quote of the Day</string>

    //Quote of the day
    <string name="topic">Quote of the Day</string>
    <string name="author"> Created By: TAYLOR SWIFT</string>


    //admin Employee
    <string name="EmpId">Please Enter Employee Id</string>
    <string name="EmpName">Please Enter Employee Name</string>
    <string name="EmpPhone">Please Enter Phone Number</string>
    <string name="EmpSalary">Please Enter the Salary</string>
    <string name="btnEsave">Save</string>
    <string name="btnEshow">Show</string>
    <string name="btnEupdate">Update</string>
    <string name="btnEdelete">Delete</string>


    //

    <string name="add">Add</string>

    //
    <string name="order_now">Order now</string>
    <string name="book_ship">Book Ship</string>
    <string name="kidsy">Kidsy</string>
    <string name="books">Books</string>

    <string name="book_details">Book Details</string>
    <string name="rs_10_00_for_ship">Rs.10.00 for ship</string>

    <string name="book_category">Book Category</string>
    <string name="book_upload_date">Book Upload Date</string>
    <string name="search_here">Search Here</string>
    <string name="show_all">Show All</string>
    <string name="orders">Orders</string>
    <string name="email_complete">Complete</string>
    <string name="back_to_home">Back to Home</string>
    <string name="message_to_customer">Dear customer, Thank you so much for choosing our Service. Your order has delivered!. Our delivery guy will deliver it you very soon. Be kind enough to reply to this email when you received your order. If not please Send us an email. Thanks again and stay with KIDSY.</string>

</resources>