<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    android:orientation="vertical"
    tools:context=".addnewspaper">
    <Button
        android:id="@+id/backhome"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp"
        android:text="@string/back_to_home"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/addnewspaper"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/addnewspaper"
        android:textColor="@color/dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/newspapername1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/newspapername"
        android:hint="@string/newspapername"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:autofillHints="@string/newspapername"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="134dp" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/author"
        android:autofillHints="@string/author"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:text="@string/author"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="134dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="50dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>