<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_rec01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back_white" />


        <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_delete_white"
        android:layout_alignParentEnd="true"
        android:background="@null"/>

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_edit_white"
            android:layout_toStartOf="@+id/deleteBtn"
            android:background="@null"/>

        <TextView
            android:id="@+id/topicTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/book_details"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>


    </RelativeLayout>

    <ImageView
        android:id="@+id/bookIconIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic__image_search_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIconIv"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        
        <TextView
            android:id="@+id/shipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rec03"
            android:padding="5dp"
            android:textSize="10sp"
            android:text="@string/rs_10_00_for_ship"
            android:paddingEnd="5dp"
            android:textColor="@color/colorRed"/>

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/book_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/priceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/book_price"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/book_category"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/book_upload_date"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />





    </LinearLayout>






</RelativeLayout>