<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paylay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentDetails"
    android:background="@drawable/aa">

    <ScrollView
        android:id="@+id/scrollpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/paylay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <Button
                android:id="@+id/backhome"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/back_to_home"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:textStyle="bold"
                android:text="@string/paymentinfo"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-black"
                >
            </TextView>

            <EditText
                android:id="@+id/payfirstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/payfirstname"
                android:autofillHints="@string/payfirstname"
                />
            <EditText
                android:id="@+id/payemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/payemail"
                android:autofillHints="@string/payemail"
                />
            <EditText
                android:id="@+id/payaddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/payaddress"
                android:autofillHints="@string/payaddress"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/paycardnumber"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="number"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/paycardnumber"
                    android:autofillHints="@string/paycardnumber"
                    />

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:background="@drawable/payvisa"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="0dp"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/paycardexpiredate"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="date"
                    android:layout_marginLeft="0dp"
                    android:ems="10"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/paycardexpiredate"
                    android:autofillHints="@string/paycardexpiredate"
                    />
                <EditText
                    android:id="@+id/payccv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/payccv"
                    android:autofillHints="@string/payccv"
                    />

            </LinearLayout>
            <EditText
                android:id="@+id/paybookname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/paybookname"
                android:autofillHints="@string/paybookname"
                />
            <EditText
                android:id="@+id/payqty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/paybookqty"
                android:autofillHints="@string/paybookqty"
                />
            <EditText
                android:id="@+id/paytotalprice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/paytotalprice"
                android:autofillHints="@string/paytotalprice"
                />
            <EditText
                android:id="@+id/paydate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:inputType="date"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/paydateupdate"
                android:autofillHints="@string/paydateupdate"/>

            <Button
                android:id="@+id/btnupdatepayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/deliverupdate"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/btndltpayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/deliverdelete"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                />

        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>