<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bookIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_search"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/bookIconIv">
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_price"
                android:layout_below="@+id/nameTV"
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/addtocartTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                android:layout_below="@+id/priceTv"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/shipTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_ship"
                android:layout_alignParentEnd="true"
                android:textSize="10dp"
                android:textColor="@color/colorRed"
                android:padding="5dp"
                android:background="@drawable/shape_rec03"
                android:textStyle="bold"/>

        </RelativeLayout>




    </RelativeLayout>

</androidx.cardview.widget.CardView>